# NobleCompiler

./: .gitmodules  CMakeLists.txt  Compiler.cpp  Compiler.h  Frame.cpp  Frame.h  LICENSE  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  main.cpp
.github/workflows/: Tests.yml
AST/: BinaryExpression.cpp  BinaryExpression.h  Expression.cpp  Expression.h  ExpressionTypes.h  ExpressionVisitor.h  GroupingExpression.cpp  GroupingExpression.h  LiteralExpression.cpp  LiteralExpression.h  Printer.cpp  Printer.h  UnaryExpression.cpp  UnaryExpression.h  VariableExpression.cpp  VariableExpression.h
Bytecode/: BytecodeVisitor.cpp  BytecodeVisitor.h
Conversions/: String.cpp  String.h
Debug/: FramePrinter.cpp  FramePrinter.h
Exceptions/: ParseException.cpp  ParseException.h
NobleCompilerTests/: ASTTests.cpp  BytecodeVisitorTests.cpp  CompilerTests.cpp  FrameTests.cpp  LexerTests.cpp  NobleCompilerTests.cpp  ParserTests.cpp
Optimisations/: ConstantFoldingVisitor.cpp  ConstantFoldingVisitor.h  ConstantRollerVisitor.cpp  ConstantRollerVisitor.h
